# yandex-ege

./: README.md  justfile  pyproject.toml
src/yandex_ege/: __main__.py  const.py  models.py
