[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yandex-ege"
version = "0.1.0"
description = "Yandex EGE solutions parser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "msgspec>=0.18.6",
    "requests>=2.32.3",
    "typer>=0.13.1",
    "yarl>=1.17.1",
]

[project.scripts]
yandex-ege = "yandex_ege.__main__:app"

[dependency-groups]
dev = [
    "basedpyright>=1.20.0",
    "ruff>=0.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yandex_ege"]

[tool.ruff]
target-version = "py312"
line-length = 99
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "G", # flake8-logging-format
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "PD", # pandas-vet
    "PLC", # pylint conventions
    "PLE", # pylint errors
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "YTT", # flake8-2020
    "RUF", # ruff-specific rules
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ASYNC", # flake8-async
]
ignore = [
    "PTH123", # `open()` should be replaced by `Path.open()`
    "PD901", # Avoid using the generic variable name df for DataFrames
    "RUF003", # Ambiguous unicode character comment
    "RUF001", # String contains ambiguous `В` (CYRILLIC CAPITAL LETTER VE)
    "G004",
    "E501"
]

[tool.basedpyright]
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
]
typeCheckingMode = "standard"
pythonPlatform = "All"
pythonVersion = "3.12"
reportMissingImports = true
reportMissingTypeStubs = true
